[Sema] SR-317: Allow rethrowing functions to take an optional function parameter